// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/properties/select shows empty placeholder 1`] = `
<div>
  <div
    class="octo-propertyvalue"
    data-testid="select-non-editable"
    tabindex="0"
  >
    <span
      class="Label empty "
    >
      <span
        class="Label-text"
      >
        Empty
      </span>
    </span>
  </div>
</div>
`;

exports[`components/properties/select shows the selected option 1`] = `
<div>
  <div
    class="octo-propertyvalue"
    data-testid="select-non-editable"
    tabindex="0"
  >
    <span
      class="Label propColorDefault "
    >
      <span
        class="Label-text"
      >
        one
      </span>
    </span>
  </div>
</div>
`;
